# qemu-boxed

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: qemu-boxed.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  call_helper.h  host_shared.h  syscall_helper.h  wrapper_helper.h
src/framework/: CMakeLists.txt  qemu-guest-entry.cpp  qemu-guest-entry.h
src/libraries/: CMakeLists.txt
src/libraries/avcodec/api/: CMakeLists.txt  main.h
src/libraries/avcodec/guest_bridge/: main.cpp
src/libraries/avcodec_api/: CMakeLists.txt  main.h
src/libraries/avcodec_guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/avcodec_host_bridge/: CMakeLists.txt  main.cpp
src/libraries/avdevice/api/: main.h
src/libraries/avdevice/guest_bridge/: main.cpp
src/libraries/avdevice/host_bridge/: main.cpp
src/libraries/avfilter/api/: main.h
src/libraries/avfilter/guest_bridge/: main.cpp
src/libraries/avformat/api/: main.h
src/libraries/avformat/guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/avformat_api/: CMakeLists.txt  main.h
src/libraries/avformat_guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/avformat_host_bridge/: CMakeLists.txt  main.cpp
src/libraries/avutil/api/: main.h
src/libraries/avutil/guest_bridge/: main.cpp
src/libraries/avutil/host_bridge/: CMakeLists.txt
src/libraries/avutil_api/: CMakeLists.txt  main.h
src/libraries/avutil_guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/avutil_host_bridge/: CMakeLists.txt  main.cpp
src/libraries/swresample/api/: main.h
src/libraries/swresample/guest_bridge/: main.cpp
src/libraries/swresample_api/: CMakeLists.txt  main.h
src/libraries/swresample_guest_bridge/: CMakeLists.txt  main.cpp
src/libraries/swresample_host_bridge/: CMakeLists.txt  main.cpp
src/libraries/swscale/: CMakeLists.txt
src/libraries/swscale/api/: main.h
src/libraries/swscale/guest_bridge/: main.cpp
src/libraries/swscale/host_bridge/: main.cpp
src/prog/: CMakeLists.txt  audiorw.hpp  config.h  main.cpp  opt_common.c  read.cpp  write.cpp
